# SPDX-FileCopyrightText: Copyright The arm-mhu Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-mhu"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Arm Message Handling Unit driver"
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-mhu.git"
keywords = ["arm", "mhu", "message", "handling", "unit"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.88"

[dependencies]
