# SPDX-FileCopyrightText: Copyright The arm-mhu Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-mhu"
version = "0.1.0"
edition = "2024"
authors = [
    "Balint Dobszay <balint.dobszay@arm.com>",
    "Imre Kis <imre.kis@arm.com>",
]
description = "Arm Message Handling Unit (MHU) driver"
license = "MIT OR Apache-2.0"
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-mhu.git"
keywords = ["arm", "mhu", "message", "mailbox", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.88"

[dependencies]
bitflags = "2.11.0"
num_enum = { version = "0.7.5", default-features = false }
safe-mmio = "0.3.0"
zerocopy = { version = "0.8", features = ["derive"] }
